--- a/index.html
+++ b/index.html
@@ -1,73 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <img class="header__logo" src="images/logo.svg" alt="logo" />
+      <ul class="header__menu">
+        <li class="header__menu--item"><a href="default.asp">Features</a></li>
+        <li class="header__menu--item"><a href="news.asp">Team</a></li>
+        <li class="header__menu--item"><a href="contact.asp">Sign In</a></li>
+      </ul>
+    </header>
+    <main>
+      <section class="cta">
+        <img
+          class="cta__image"
+          src="images/illustration-1.svg"
+          alt="illustration people looking into file"
+        />
+        <h1 class="cta__heading">
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p class="cta__paragraph">
+          Fylo stores your most important files in one secure location. Access
+          them wherever you need, share and collaborate with friends, family,
+          and co-workers.
+        </p>
+        <form class="form" action="">
+          <input
+            class="form__input"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Enter your email"
+          />
+          <button class="form__button">Get Started</button>
+        </form>
+      </section>
 
-  Features
-  Team
-  Sign In
+      <img src="images/bg-curve-mobile.svg" alt="" />
 
-  All your files in one secure location, accessible anywhere.
+      <section class="productivity">
+        <img
+          class="productivity__image"
+          src="images/illustration-2.svg"
+          alt="illustration people talking"
+        />
+        <h2 class="productivity__heading">Stay productive, wherever you are</h2>
+        <p class="productivity__paragraph">
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
+        </p>
+        <p class="productivity__paragraph">
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required!
+        </p>
+        <a class="productivity__link" href="#"
+          >See how Fylo works
+          <img
+            class="productivity__link--icon"
+            src="images/icon-arrow.svg"
+            alt="right arrow icon"
+          />
+        </a>
+        <div class="testimonial">
+          <img
+            class="testimonial__image"
+            src="images/icon-quotes.svg"
+            alt="quote icon"
+          />
+          <p class="testimonial__paragraph">
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <div class="testimonial__profile">
+            <img
+              class="testimonial__profile--image"
+              src="images/avatar-testimonial.jpg"
+              alt="testimonial photo"
+            />
+            <div>
+              <p class="testimonial__profile--name">Kyle Burton</p>
+              <p class="testimonial__profile--description">
+                Founder & CEO, Huddle
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+      <section class="signup">
+        <h2 class="signup__heading">Get early access today</h2>
+        <p class="signup__paragraph">
+          It only takes a minute to sign up and our free starter tier is
+          extremely generous. If you have any questions, our support team would
+          be happy to help you.
+        </p>
+        <form class="form" action="">
+          <input
+            class="form__input form__input--signup"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="email@example.com"
+          />
+          <button class="form__button form__button--signup">
+            Get Started For Free
+          </button>
+        </form>
+      </section>
+    </main>
 
-  Get Started
+    <footer class="footer">
+      <img class="footer__logo" src="images/logo.svg" alt="" />
 
-  Stay productive, wherever you are
+      <div class="footer__contact">
+        <p class="footer__contact--item">
+          <img src="images/icon-phone.svg" alt="phone icon" />Phone:
+          +1-543-123-4567
+        </p>
+        <p class="footer__contact--item">
+          <img src="images/icon-email.svg" alt="email icon" />example@fylo.com
+        </p>
+      </div>
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
+      <ul class="footer__menu">
+        <li class="footer__menu--item">About Us</li>
+        <li class="footer__menu--item">Jobs</li>
+        <li class="footer__menu--item">Press</li>
+        <li class="footer__menu--item">Blog</li>
+      </ul>
+      <ul class="footer__menu">
+        <li class="footer__menu--item">Contact Us</li>
+        <li class="footer__menu--item">Terms</li>
+        <li class="footer__menu--item">Privacy</li>
+      </ul>
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+      <ul class="footer__social">
+        <li class="footer__social--item">facebook</li>
+        <li class="footer__social--item">twitter</li>
+        <li class="footer__social--item">instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
